# DearEditor

./: .gitignore  .gitmodules  main.py  readme.md  report.py  requirements.txt
.shiboken/: readme.md
.shiboken/qtads/: CMakeLists.txt  __init__.py  bindings.xml  readme.md  testpkg.py
.shiboken/qtads/src/: AutoHideDockContainer.cpp  AutoHideSideBar.cpp  DockAreaTabBar.cpp  DockAreaTitleBar.cpp  DockAreaTitleBar_p.h  DockAreaWidget.cpp  DockContainerWidget.cpp  DockContainerWidget.h  DockFocusController.cpp  DockManager.cpp  DockManager.h  DockOverlay.cpp  DockOverlay.h  DockWidget.cpp  DockWidgetTab.cpp  FloatingDockContainer.cpp  FloatingDragPreview.cpp  FloatingDragPreview.h  ads_globals.h
.shiboken/qtads/typesystems/: CAutoHideDockContainer.xml  CAutoHideSideBar.xml  CAutoHideTab.xml  CDockAreaTabBar.xml  CDockAreaTitleBar.xml  CDockAreaTitleBar_p.xml  CDockAreaWidget.xml  CDockComponentsFactory.xml  CDockContainerWidget.xml  CDockFocusController.xml  CDockManager.xml  CDockOverlay.xml  CDockSplitter.xml  CDockWidget.xml  CDockWidgetTab.xml  CElidingLabel.xml  CFloatingDockContainer.xml  CFloatingDragPreview.xml  CIconProvider.xml  CPushButton.xml  CResizeHandle.xml  ads_global.xml
.shiboken/qtads/typesystems/linux/: FloatingWidgetTitleBar.xml
.support/pyside6_qtads/: CMakeLists.txt  LICENSE  init.py  pyproject.toml  readme.md  setup.cfg  setup.py  testpkg.py
.support/pyside6_qtads/scripts/: qtads-build-osx  qtads-build-win.bat  qtads-clean-osx  qtads-clean-win.bat  qtads-config-osx  qtads-config-win.bat
.support/pyside6_qtads/src/: __init__.py  bindings.h  bindings.xml
.support/pyside6_qtads/src/typesystems/: CAutoHideDockContainer.xml  CAutoHideSideBar.xml  CAutoHideTab.xml  CDockAreaTabBar.xml  CDockAreaTitleBar.xml  CDockAreaTitleBar_p.xml  CDockAreaWidget.xml  CDockComponentsFactory.xml  CDockContainerWidget.xml  CDockFocusController.xml  CDockManager.xml  CDockOverlay.xml  CDockSplitter.xml  CDockWidget.xml  CDockWidgetTab.xml  CElidingLabel.xml  CFloatingDockContainer.xml  CFloatingDragPreview.xml  CIconProvider.xml  CPushButton.xml  CResizeHandle.xml  ads_global.xml
.support/pyside6_qtads/src/typesystems/linux/: FloatingWidgetTitleBar.xml
.support/sublime_addon/: ide.osx.sublime-project  ide.win.sublime-project  logging.tmLanguage
.support/sublime_addon/build-switcher/: Default (Linux).sublime-keymap  Default (Windows).sublime-keymap  README.md  build_switcher.py
.support/sublime_addon/exec-in-window-st3/: README.md  exec_in_window.py  messages.json
.support/sublime_addon/exec-in-window-st3/messages/: usage.txt
data/themes/dark/: init.py  macro  style.py
data/themes/dark/qss/: basic.qss  dock.qss
data/themes/dark/qss/views/: console.qss  inspector.qss
data/themes/dark/qss/widgets/: menu.qss  scrollbar.qss  statusbar.qss  toolbar.qss  trees.qss
docs/: conf.py  index.rst  readme.md  requirements.txt
docs/.project/: about.rst  conf.py  index.rst  readme.md  requirements.txt
docs/.project/source/: conf.py  index.rst
docs/_docs/: about.rst  contributing.rst  manual.rst
docs/_docs/about/: frequently_asked_questions.rst  introduction.rst  license.rst  troubleshooting.rst
editor/: __init__.py  editor_prefs.py  ide.py  ide_prefs.py  main_window.py  theme_manager.py  view_manager.py
editor/common/: __init__.py  argparse.py  database.py  dispatcher.py  ease.py  file_watcher.py  icon_cache.py  logger.py  math.py  native.py  pipeline.py  types.py  util.py
editor/common/pyqtads/: ShibokenQtAds.pyd  __init__.py
editor/common/pyqtads/osx/: libqt6advanceddocking.4.0.2.dylib  libqtadvanceddocking.4.0.2.dylib  libqtadvanceddocking.dylib
editor/common/pyqtads/win/: PySide6QtAds.pyd
editor/models/: basic_model.py
editor/models/asset/: asset_db.py
editor/models/editor/: asset_model.py  data_grid.py  file_system.py  menu_tree.py  property_model.py
editor/models/graph/: base.py
editor/pipeline/: core.py  pipeline.py
editor/pipeline/asset/: metadata.py
editor/views/: __init__.py
editor/views/animation/: __init__.py
editor/views/console/: __init__.py
editor/views/fsm_graph/: __init__.py
editor/views/gallery/: __init__.py
editor/views/game/: __init__.py
editor/views/hierarchy/: __init__.py
editor/views/inspector/: __init__.py
editor/views/preference/: __init__.py
editor/views/preview/: __init__.py
editor/views/profiler/: __init__.py
editor/views/project/: __init__.py
editor/views/project_setting/: __init__.py
editor/views/scene/: __init__.py
editor/views/shader_graph/: __init__.py
editor/views/test_runner/: __init__.py
editor/widgets/: color_picker.py  drawers.py  flow_layout.py  menubar.py  menutree.py  pixmap_icon.py  preview.py  screenshot.py  sliding_stacked.py  statusbar.py  toolbar.py  treeview.py
editor/widgets/basic/: button.py  color_edit.py  drop_down.py  enum_buttons.py  line_edit.py  object_edit.py  progress_bar.py  range_slider.py  reference_edit.py  slider.py  spinner.py  text_area.py  vector_edit.py
editor/widgets/complex/: collapsible.py  color_picker.py  datagrid_view.py  sliding_stacked.py  tree_stacked.py  tree_view.py  treeview.py
editor/widgets/container/: sliding_stacked.py
editor/widgets/control/: line_edit.py  search_edit.py  slider.py
editor/widgets/dock/: __init__.py
editor/widgets/dock/osx/: libqt6advanceddocking.dylib
editor/widgets/fields/: search_field.py  slider.py
editor/widgets/group/: box_group.py  foldout_group.py  simple_group.py  tab_group.py  title_group.py
editor/widgets/misc/: breadcrumb.py  collapsible.py  flow_layout.py  info_box.py  line.py  menu_style.py  pixmap_icon.py  toast.py  waiting_spinner.py
extensions/: __init__.py
launcher/: __init__.py
py/: .gitignore
themes/dark/qss/: basic.qss  dock.qss
themes/dark/qss/views/: console.qss
themes/dark/qss/widgets/: menu.qss  statusbar.qss  toolbar.qss
tools/: __init__.py
tools/doc/: __init__.py
tools/hello/: __init__.py
tools/ide/: __init__.py
tools/python/: __init__.py
tools/report/: __init__.py
