[metadata]
name = pyside6_qtads
version = 0.0.1
description = PySide6 wrapper for Qt Advanced Docking System
long_description = file: README.md
long_description_content_type = text/markdown
author = CJ Niemira
author_email = siege@siege.org
license = MIT
platforms = any
url = https://github.com/cniemira/pyside6_qtads/
keywords = PySide6, PySide, Qt, Advanced-Docking-System
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    pyside6
#     # This requirement is only necessary if the build_extension_env
#     # context manager is used in the top-level __init__.py
#     cmake-build-extension
setup_requires =
    cmake-build-extension
    setuptools

[options.packages.find]
where = src
